# qml-ogdf

./: .gitignore  CMakeLists.txt  README.md  edgemodel.cpp  edgemodel.h  graph.cpp  graph.h  graphlayout.cpp  graphlayout.h  nodemodel.cpp  nodemodel.h  ogdfplugin.cpp  ogdfplugin.h
demo/: CMakeLists.txt  main.cpp  main.qrc
demo/qml/: CanvasView.qml  ConsoleView.qml  GraphScene.qml  GraphTools.qml  GraphView.qml  Header.qml  Sidebar.qml  main.js  main.qml
example/: main.cpp  main.qml
ogdf/include/ogdf/internal/: config_autogen.h
ogdf/src/upward/: UpwardPlanRep.cpp
ogdfplugin/: CMakeLists.txt  EdgeSpline.qml  GraphView.qml  edgemodel.cpp  edgemodel.h  graph.cpp  graph.h  graphlayout.cpp  graphlayout.h  nodemodel.cpp  nodemodel.h  ogdfplugin.cpp  ogdfplugin.h  qmldir
ogdfplugin/ogdf/include/ogdf/basic/: ArrayBuffer.h  BoundedQueue.h  BoundedStack.h
ogdfplugin/ogdf/include/ogdf/internal/: config_autogen.h
ogdfplugin/ogdf/include/ogdf/internal/basic/: config.h
ogdfplugin/ogdf/src/ogdf/basic/: Thread.cpp
ogdfplugin/ogdf/src/ogdf/energybased/: SpringEmbedderFRExact.cpp
ogdfplugin/ogdf/src/ogdf/fileformats/: GmlParser.cpp  LineBuffer.cpp
ogdfplugin/ogdf/src/ogdf/layered/: FastHierarchyLayout.cpp
ogdfplugin/ogdf/src/ogdf/orthogonal/: OrthoLayout.cpp
tools/: find_layouts.py  layouts.py
